--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.0.0-beta",
     "enzyme": "^3.1.1",
     "enzyme-adapter-react-16": "^1.0.4",
     "expect": "^21.2.1",
+    "jquery": "^3.0.0",
     "prop-types": "^15.6.0",
-    "react": "^16.0.0",
+    "react": "^16.1.1",
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.1.1",
     "react-scripts": "1.0.17",
     "react-test-renderer": "^16.1.0",
+    "reactstrap": "^5.0.0-alpha.3",
     "request": "^2.83.0"
   },
   "scripts": {
