--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.1.1",
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
+    "react-dnd-touch-backend": "^0.3.17",
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17",
     "react-test-renderer": "^16.1.0",
